Replacing Java9 Map.of to Collections Java8 for backport